--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Adamkiss\\Toolkit\\": "src/",
+            "Kirby\\Cms\\": "lib/CmsMocks/",
+			"Adamkiss\\Toolkit\\": "src/",
 			"Adamkiss\\Toolkit\\Tests\\": "tests/"
         },
 		"files": [
@@ -25,7 +26,7 @@
     },
 	"scripts": {
 		"dist": "php build/build.php",
-		"test": "composer run dist && php tests/test-src.php"
+		"test": "composer run dist && php tests/test-src.php && php tests/test-dist.php"
 	},
     "require": {
         "claviska/simpleimage": "^4.3"
