--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "adamkiss/toolkit",
     "description": "Standalone copy of Toolkit parts of Kirby CMS",
+	"version": "0.1.0",
     "type": "library",
     "license": "MIT",
     "autoload": {
