GH Actions: fix release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,8 @@ jobs:
         name: ${{ env.artifact_name }}
         path: ${{ env.artifact_path }}
     - name: Add file to the latest tag
-      uses: softprops/action-gh-release@v1
+      uses: SierraSoftworks/gh-releases@v1.0.8
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         files: ${{ env.artifact_path }}
-        overwrite: 'true'
+        overwrite: true
