--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,15 @@ jobs:
       with:
         name: ${{ env.artifact_name }}
         path: ${{ env.artifact_path }}
+    - name: Get the latest tag
+      id: get_latest_tag
+      run: |
+        latest_tag=$(git describe --abbrev=0 --tags)
+        echo "latest_tag=$latest_tag" >> $GITHUB_ENV
     - name: Add file to the latest tag
       uses: SierraSoftworks/gh-releases@v1.0.8
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         files: ${{ env.artifact_path }}
         overwrite: true
+        release_tag: ${{ env.latest_tag }}
